--- a/src/containers/App/App.css
+++ b/src/containers/App/App.css
@@ -1,7 +1,7 @@
 .app__container {
     min-width: 100vw;
     min-height: 100vh;
-    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0.5) 100%), url('/images/bg-pattern.png') repeat;
+    background: linear-gradient(to bottom, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0.5) 100%), url('/fb-css-test/images/bg-pattern.png') repeat;
     display: flex;
     align-items: center;
 }
