--- a/src/components/Product/Product.scss
+++ b/src/components/Product/Product.scss
@@ -1,7 +1,18 @@
+$product-color: #1698d9;
+$product-color-str: 1698d9;
+$product-hover-color:#2ea8e6;
+$product-hover-color-str:2ea8e6;
+$product-selected-color:#d91667;
+$product-selected-color-str:d91667;
+$product-selected-hover-color:#e62e7a;
+$product-selected-hover-color-str:e62e7a;
+$product-disabled-color:#b3b3b3;
+$product-disabled-color-str:b3b3b3;
+
 .product {
     position: relative;
-    border: 4px solid #1698d9;
-    border-radius: 10px;
+    border: 4px solid $product-color;
+    border-radius: 11px;
     width: 320px;
     height: 480px;
     padding: 20px 12px 12px 45px;
@@ -10,7 +21,7 @@
     line-height: 1;
     background-color: #f2f2f2;
     background-position: left top;
-    background-image: url("data:image/svg+xml;utf8,<svg width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'><polygon points='0,0 39,0 0,39' fill='%231698d9' stroke='none' /></svg>");
+    background-image: url("data:image/svg+xml;utf8,<svg width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'><polygon points='0,0 39,0 0,39' fill='%23"+$product-color-str+"' stroke='none' /></svg>");
 }
 
 .product::before {
@@ -29,7 +40,7 @@
 }
 
 .product__slogan span {
-    color: #e62e7a;
+    color: $product-selected-hover-color;
 }
 
 .product__name {
@@ -66,7 +77,7 @@
     bottom: 12px;
     width: 81px;
     height: 81px;
-    background-color: #1698d9;
+    background-color: $product-color;
     color: #ffffff;
     display: flex;
     flex-direction: column;
@@ -87,43 +98,43 @@
 
 .product:hover {
     cursor: pointer;
-    border-color: #2ea8e6;
-    background-image: url("data:image/svg+xml;utf8,<svg width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'><polygon points='0,0 39,0 0,39' fill='%232ea8e6' stroke='none' /></svg>");
+    border-color: $product-hover-color;
+    background-image: url("data:image/svg+xml;utf8,<svg width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'><polygon points='0,0 39,0 0,39' fill='%23"+$product-hover-color-str+"' stroke='none' /></svg>");
 }
 
 .product:hover .product__weight {
-    background-color: #2ea8e6;
+    background-color: $product-hover-color;
 }
 
 /* selected */
 
 .product--selected.product {
-    border-color: #d91667;
-    background-image: url("data:image/svg+xml;utf8,<svg width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'><polygon points='0,0 39,0 0,39' fill='%23d91667' stroke='none' /></svg>");
+    border-color: $product-selected-color;
+    background-image: url("data:image/svg+xml;utf8,<svg width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'><polygon points='0,0 39,0 0,39' fill='%23"+$product-selected-color-str+"' stroke='none' /></svg>");
 }
 
 .product--selected .product__weight {
-    background-color: #d91667;
+    background-color: $product-selected-color;
 }
 
 /* selected hover */
 
 .product--selected.product:hover {
     cursor: pointer;
-    border-color: #e62e7a;
-    background-image: url("data:image/svg+xml;utf8,<svg width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'><polygon points='0,0 39,0 0,39' fill='%23e62e7a' stroke='none' /></svg>");
+    border-color: $product-selected-hover-color;
+    background-image: url("data:image/svg+xml;utf8,<svg width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'><polygon points='0,0 39,0 0,39' fill='%23"+$product-selected-hover-color-str+"' stroke='none' /></svg>");
 }
 
 .product--selected.product:hover .product__weight {
-    background-color: #e62e7a;
+    background-color: $product-selected-hover-color;
 }
 
 /* disabled */
 
 .product--disabled.product {
     cursor: auto;
-    border-color: #b3b3b3;
-    background-image: url("data:image/svg+xml;utf8,<svg width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'><polygon points='0,0 39,0 0,39' fill='%23b3b3b3' stroke='none' /></svg>");
+    border-color: $product-disabled-color;
+    background-image: url("data:image/svg+xml;utf8,<svg width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'><polygon points='0,0 39,0 0,39' fill='%23"+$product-disabled-color-str+"' stroke='none' /></svg>");
 }
 
 .product--disabled.product::before {
@@ -135,15 +146,15 @@
 .product--disabled .product__conteins,
 .product--disabled .product__description {
     opacity: 0.5;
-    color: #b3b3b3;
+    color: $product-disabled-color;
 }
 
 .product--disabled .product__weight {
-    background-color: #b3b3b3;
+    background-color: $product-disabled-color;
 }
 
 .product--disabled.product:hover .product__weight {
-    background-color: #b3b3b3;
+    background-color: $product-disabled-color;
 }
 
 /* fab */
@@ -158,8 +169,8 @@
 }
 
 .product-fab .product-fab__link {
-    color: #1698d9;
-    border-bottom: 1px dashed #1698d9;
+    color: $product-color;
+    border-bottom: 1px dashed $product-color;
 }
 
 .product-fab .product-fab__link:hover {
@@ -168,7 +179,7 @@
 }
 
 .product-fab span {
-    color: #1698d9;
+    color: $product-color;
 }
 
 .product-fab span.product-fab__over {
