--- a/src/components/Product/Product.scss
+++ b/src/components/Product/Product.scss
@@ -9,6 +9,10 @@ $product-selected-hover-color-str:e62e7a;
 $product-disabled-color:#b3b3b3;
 $product-disabled-color-str:b3b3b3;
 
+@function svgBG($color) {
+    @return "data:image/svg+xml;charset=utf8,%3Csvg width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='0,0 39,0 0,39' fill='%23"+$color+"' stroke='none' /%3E%3C/svg%3E";
+}
+
 .product {
     position: relative;
     border: 4px solid $product-color;
@@ -21,7 +25,7 @@ $product-disabled-color-str:b3b3b3;
     line-height: 1;
     background-color: #f2f2f2;
     background-position: left top;
-    background-image: url("data:image/svg+xml;utf8,<svg width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'><polygon points='0,0 39,0 0,39' fill='%23"+$product-color-str+"' stroke='none' /></svg>");
+    background-image: url(svgBG($product-color-str));
 }
 
 .product::before {
@@ -99,7 +103,7 @@ $product-disabled-color-str:b3b3b3;
 .product:hover {
     cursor: pointer;
     border-color: $product-hover-color;
-    background-image: url("data:image/svg+xml;utf8,<svg width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'><polygon points='0,0 39,0 0,39' fill='%23"+$product-hover-color-str+"' stroke='none' /></svg>");
+    background-image: url(svgBG($product-hover-color-str));
 }
 
 .product:hover .product__weight {
@@ -110,7 +114,7 @@ $product-disabled-color-str:b3b3b3;
 
 .product--selected.product {
     border-color: $product-selected-color;
-    background-image: url("data:image/svg+xml;utf8,<svg width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'><polygon points='0,0 39,0 0,39' fill='%23"+$product-selected-color-str+"' stroke='none' /></svg>");
+    background-image: url(svgBG($product-selected-color-str));
 }
 
 .product--selected .product__weight {
@@ -122,7 +126,7 @@ $product-disabled-color-str:b3b3b3;
 .product--selected.product:hover {
     cursor: pointer;
     border-color: $product-selected-hover-color;
-    background-image: url("data:image/svg+xml;utf8,<svg width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'><polygon points='0,0 39,0 0,39' fill='%23"+$product-selected-hover-color-str+"' stroke='none' /></svg>");
+    background-image: url(svgBG($product-selected-hover-color-str));
 }
 
 .product--selected.product:hover .product__weight {
@@ -134,7 +138,7 @@ $product-disabled-color-str:b3b3b3;
 .product--disabled.product {
     cursor: auto;
     border-color: $product-disabled-color;
-    background-image: url("data:image/svg+xml;utf8,<svg width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'><polygon points='0,0 39,0 0,39' fill='%23"+$product-disabled-color-str+"' stroke='none' /></svg>");
+    background-image: url(svgBG($product-disabled-color-str));
 }
 
 .product--disabled.product::before {
